[gd_scene load_steps=10 format=4 uid="uid://b8ysee87pvxp4"]

[ext_resource type="Script" path="res://game/game.gd" id="1_ia6df"]
[ext_resource type="AudioStream" uid="uid://d1w4ttd6ywtw4" path="res://assets/sounds/settle.wav" id="3_1ikwo"]
[ext_resource type="TileSet" uid="uid://ckeitfo07151n" path="res://game/tilemap.tres" id="3_c4wfy"]
[ext_resource type="AudioStream" uid="uid://dwbjuq4hklwi6" path="res://assets/sounds/clear.wav" id="4_lxhe6"]
[ext_resource type="AudioStream" uid="uid://citcw3api16ce" path="res://assets/sounds/next_level.wav" id="4_tfuta"]
[ext_resource type="AudioStream" uid="uid://d3v2l7v0x8sx1" path="res://assets/music/tetrifection_full.wav" id="6_kc7xo"]
[ext_resource type="AudioStream" uid="uid://bttdw5tw8eu2f" path="res://assets/music/tetrifection_alt.wav" id="7_gpy5p"]
[ext_resource type="Script" path="res://ui/ui_pause.gd" id="8_16dyp"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_ii76b"]
clip_count = 2
clip_0/name = &"Tetrifection Full"
clip_0/stream = ExtResource("6_kc7xo")
clip_0/auto_advance = 0
clip_1/name = &"Tetrifection Alt"
clip_1/stream = ExtResource("7_gpy5p")
clip_1/auto_advance = 0
_transitions = {
Vector2i(0, 1): {
"fade_beats": 2,
"fade_mode": 4,
"from_time": 2,
"to_time": 0
},
Vector2i(1, 0): {
"fade_beats": 2,
"fade_mode": 4,
"from_time": 2,
"to_time": 0
}
}

[node name="Game" type="Node2D" groups=["this_piece"]]
script = ExtResource("1_ia6df")

[node name="BGLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAMAP//AgAIAAAAAAANAP//AgAIAAAAAAAOAP//AgAIAAAAAAAPAP//AgAIAAAAAAAQAP//AgAIAAAAAAARAP//AgAIAAAAAAAMAAAAAgAIAAAAAAAMAAEAAgAIAAAAAAAMAAIAAgAIAAAAAAAMAAMAAgAIAAAAAAAMAAQAAgAIAAAAAAASAP//AgAIAAAAAAAMAAUAAgAIAAAAAAANAAUAAgAIAAAAAAAOAAUAAgAIAAAAAAAPAAUAAgAIAAAAAAAQAAUAAgAIAAAAAAARAAUAAgAIAAAAAAASAAUAAgAIAAAAAAASAAQAAgAIAAAAAAASAAMAAgAIAAAAAAASAAIAAgAIAAAAAAASAAEAAgAIAAAAAAASAAAAAgAIAAAAAAAMAAcAAgAIAAAAAAAMAAgAAgAIAAAAAAAMAAkAAgAIAAAAAAAMAAoAAgAIAAAAAAAMAAsAAgAIAAAAAAAMAAwAAgAIAAAAAAAMAA0AAgAIAAAAAAANAAcAAgAIAAAAAAAOAAcAAgAIAAAAAAAPAAcAAgAIAAAAAAAQAAcAAgAIAAAAAAARAAcAAgAIAAAAAAASAAcAAgAIAAAAAAASAAgAAgAIAAAAAAASAAkAAgAIAAAAAAASAAoAAgAIAAAAAAASAAsAAgAIAAAAAAASAAwAAgAIAAAAAAASAA0AAgAIAAAAAAARAA0AAgAIAAAAAAAQAA0AAgAIAAAAAAAPAA0AAgAIAAAAAAAOAA0AAgAIAAAAAAANAA0AAgAIAAAAAAAMAA8AAgAIAAAAAAAMABAAAgAIAAAAAAAMABEAAgAIAAAAAAAMABIAAgAIAAAAAAAMABMAAgAIAAAAAAAMABQAAgAIAAAAAAANAA8AAgAIAAAAAAAOAA8AAgAIAAAAAAAPAA8AAgAIAAAAAAAQAA8AAgAIAAAAAAARAA8AAgAIAAAAAAASAA8AAgAIAAAAAAASABAAAgAIAAAAAAASABEAAgAIAAAAAAASABIAAgAIAAAAAAASABMAAgAIAAAAAAASABQAAgAIAAAAAAANABQAAgAIAAAAAAAOABQAAgAIAAAAAAAPABQAAgAIAAAAAAAQABQAAgAIAAAAAAARABQAAgAIAAAAAAANAAAAAgAJAAAAAAANAAIAAgAJAAAAAAANAAQAAgAJAAAAAAAPAAAAAgAJAAAAAAAPAAIAAgAJAAAAAAAPAAQAAgAJAAAAAAARAAAAAgAJAAAAAAARAAIAAgAJAAAAAAARAAQAAgAJAAAAAAAOAAEAAgAJAAAAAAAQAAMAAgAJAAAAAAAQAAEAAgAJAAAAAAAOAAMAAgAJAAAAAAANAAEAAgAKAAAAAAAOAAAAAgAKAAAAAAAQAAAAAgAKAAAAAAAPAAEAAgAKAAAAAAARAAEAAgAKAAAAAAAQAAIAAgAKAAAAAAAOAAIAAgAKAAAAAAANAAMAAgAKAAAAAAAOAAQAAgAKAAAAAAAPAAMAAgAKAAAAAAAQAAQAAgAKAAAAAAARAAMAAgAKAAAAAAANAAgAAgAJAAAAAAANAAkAAgAKAAAAAAANAAoAAgAJAAAAAAANAAsAAgAKAAAAAAANAAwAAgAJAAAAAAAOAAgAAgAKAAAAAAAOAAkAAgAJAAAAAAAOAAoAAgAKAAAAAAAOAAsAAgAJAAAAAAAOAAwAAgAKAAAAAAAPAAgAAgAJAAAAAAAPAAkAAgAKAAAAAAAPAAoAAgAJAAAAAAAPAAsAAgAKAAAAAAAPAAwAAgAJAAAAAAAQAAgAAgAKAAAAAAAQAAkAAgAJAAAAAAAQAAoAAgAKAAAAAAAQAAsAAgAJAAAAAAAQAAwAAgAKAAAAAAARAAgAAgAJAAAAAAARAAkAAgAKAAAAAAARAAoAAgAJAAAAAAARAAsAAgAKAAAAAAARAAwAAgAJAAAAAAD+//7/AgAGAAAAAAALAP7/AgAGAAAAAAALABUAAgAGAAAAAAD+/xUAAgAGAAAAAAD/////AgAIAAIAAAD//wAAAgAIAAAAAAD//wEAAgAIAAAAAAD//wIAAgAIAAAAAAD//wMAAgAIAAAAAAD//wQAAgAIAAAAAAD//wUAAgAIAAAAAAD//wYAAgAIAAAAAAD//wcAAgAIAAAAAAD//wgAAgAIAAAAAAD//wkAAgAIAAAAAAD//woAAgAIAAAAAAD//wsAAgAIAAAAAAD//wwAAgAIAAAAAAD//w0AAgAIAAAAAAD//w4AAgAIAAAAAAD//w8AAgAIAAAAAAD//xAAAgAIAAAAAAD//xEAAgAIAAAAAAD//xIAAgAIAAAAAAD//xMAAgAIAAAAAAD//xQAAgAIAAAAAAAAABQAAgAIAAAAAAABABQAAgAIAAAAAAACABQAAgAIAAAAAAADABQAAgAIAAAAAAAEABQAAgAIAAAAAAAFABQAAgAIAAAAAAAGABQAAgAIAAAAAAAHABQAAgAIAAAAAAAIABQAAgAIAAAAAAAJABQAAgAIAAAAAAAKABQAAgAIAAAAAAAKABMAAgAIAAAAAAAKABIAAgAIAAAAAAAKABEAAgAIAAAAAAAKABAAAgAIAAAAAAAKAA8AAgAIAAAAAAAKAA4AAgAIAAAAAAAKAA0AAgAIAAAAAAAKAAwAAgAIAAAAAAAKAAsAAgAIAAAAAAAKAAoAAgAIAAAAAAAKAAkAAgAIAAAAAAAKAAgAAgAIAAAAAAAKAAcAAgAIAAAAAAAKAAYAAgAIAAAAAAAKAAUAAgAIAAAAAAAKAAQAAgAIAAAAAAAKAAMAAgAIAAAAAAAKAAIAAgAIAAAAAAAKAAEAAgAIAAAAAAAKAAAAAgAIAAAAAAAKAP//AgAIAAAAAAAJAP//AgAIAAAAAAAIAP//AgAIAAAAAAAHAP//AgAIAAAAAAAGAP//AgAIAAAAAAAFAP//AgAIAAAAAAAEAP//AgAIAAAAAAADAP//AgAIAAAAAAACAP//AgAIAAAAAAABAP//AgAIAAAAAAAAAP//AgAIAAAAAAA=")
tile_set = ExtResource("3_c4wfy")

[node name="BoardLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAMAP//AgAIAAAAAAANAP//AgAIAAAAAAAOAP//AgAIAAAAAAAPAP//AgAIAAAAAAAQAP//AgAIAAAAAAARAP//AgAIAAAAAAAMAAAAAgAIAAAAAAAMAAEAAgAIAAAAAAAMAAIAAgAIAAAAAAAMAAMAAgAIAAAAAAAMAAQAAgAIAAAAAAASAP//AgAIAAAAAAAMAAUAAgAIAAAAAAANAAUAAgAIAAAAAAAOAAUAAgAIAAAAAAAPAAUAAgAIAAAAAAAQAAUAAgAIAAAAAAARAAUAAgAIAAAAAAASAAUAAgAIAAAAAAASAAQAAgAIAAAAAAASAAMAAgAIAAAAAAASAAIAAgAIAAAAAAASAAEAAgAIAAAAAAASAAAAAgAIAAAAAAAMAAcAAgAIAAAAAAAMAAgAAgAIAAAAAAAMAAkAAgAIAAAAAAAMAAoAAgAIAAAAAAAMAAsAAgAIAAAAAAAMAAwAAgAIAAAAAAAMAA0AAgAIAAAAAAANAAcAAgAIAAAAAAAOAAcAAgAIAAAAAAAPAAcAAgAIAAAAAAAQAAcAAgAIAAAAAAARAAcAAgAIAAAAAAASAAcAAgAIAAAAAAASAAgAAgAIAAAAAAASAAkAAgAIAAAAAAASAAoAAgAIAAAAAAASAAsAAgAIAAAAAAASAAwAAgAIAAAAAAASAA0AAgAIAAAAAAARAA0AAgAIAAAAAAAQAA0AAgAIAAAAAAAPAA0AAgAIAAAAAAAOAA0AAgAIAAAAAAANAA0AAgAIAAAAAAAMAA8AAgAIAAAAAAAMABAAAgAIAAAAAAAMABEAAgAIAAAAAAAMABIAAgAIAAAAAAAMABMAAgAIAAAAAAAMABQAAgAIAAAAAAANAA8AAgAIAAAAAAAOAA8AAgAIAAAAAAAPAA8AAgAIAAAAAAAQAA8AAgAIAAAAAAARAA8AAgAIAAAAAAASAA8AAgAIAAAAAAASABAAAgAIAAAAAAASABEAAgAIAAAAAAASABIAAgAIAAAAAAASABMAAgAIAAAAAAASABQAAgAIAAAAAAANABQAAgAIAAAAAAAOABQAAgAIAAAAAAAPABQAAgAIAAAAAAAQABQAAgAIAAAAAAARABQAAgAIAAAAAAANAAAAAgAJAAAAAAANAAIAAgAJAAAAAAANAAQAAgAJAAAAAAAPAAAAAgAJAAAAAAAPAAIAAgAJAAAAAAAPAAQAAgAJAAAAAAARAAAAAgAJAAAAAAARAAIAAgAJAAAAAAARAAQAAgAJAAAAAAAOAAEAAgAJAAAAAAAQAAMAAgAJAAAAAAAQAAEAAgAJAAAAAAAOAAMAAgAJAAAAAAANAAEAAgAKAAAAAAAOAAAAAgAKAAAAAAAQAAAAAgAKAAAAAAAPAAEAAgAKAAAAAAARAAEAAgAKAAAAAAAQAAIAAgAKAAAAAAAOAAIAAgAKAAAAAAANAAMAAgAKAAAAAAAOAAQAAgAKAAAAAAAPAAMAAgAKAAAAAAAQAAQAAgAKAAAAAAARAAMAAgAKAAAAAAANAAgAAgAJAAAAAAANAAkAAgAKAAAAAAANAAoAAgAJAAAAAAANAAsAAgAKAAAAAAANAAwAAgAJAAAAAAAOAAgAAgAKAAAAAAAOAAkAAgAJAAAAAAAOAAoAAgAKAAAAAAAOAAsAAgAJAAAAAAAOAAwAAgAKAAAAAAAPAAgAAgAJAAAAAAAPAAkAAgAKAAAAAAAPAAoAAgAJAAAAAAAPAAsAAgAKAAAAAAAPAAwAAgAJAAAAAAAQAAgAAgAKAAAAAAAQAAkAAgAJAAAAAAAQAAoAAgAKAAAAAAAQAAsAAgAJAAAAAAAQAAwAAgAKAAAAAAARAAgAAgAJAAAAAAARAAkAAgAKAAAAAAARAAoAAgAJAAAAAAARAAsAAgAKAAAAAAARAAwAAgAJAAAAAAD+//7/AgAGAAAAAAALAP7/AgAGAAAAAAALABUAAgAGAAAAAAD+/xUAAgAGAAAAAAD/////AgAIAAAAAAD//wAAAgAIAAAAAAD//wEAAgAIAAAAAAD//wIAAgAIAAAAAAD//wMAAgAIAAAAAAD//wQAAgAIAAAAAAD//wUAAgAIAAAAAAD//wYAAgAIAAAAAAD//wcAAgAIAAAAAAD//wgAAgAIAAAAAAD//wkAAgAIAAAAAAD//woAAgAIAAAAAAD//wsAAgAIAAAAAAD//wwAAgAIAAAAAAD//w0AAgAIAAAAAAD//w4AAgAIAAAAAAD//w8AAgAIAAAAAAD//xAAAgAIAAAAAAD//xEAAgAIAAAAAAD//xIAAgAIAAAAAAD//xMAAgAIAAAAAAD//xQAAgAIAAAAAAAAABQAAgAIAAAAAAABABQAAgAIAAAAAAACABQAAgAIAAAAAAADABQAAgAIAAAAAAAEABQAAgAIAAAAAAAFABQAAgAIAAAAAAAGABQAAgAIAAAAAAAHABQAAgAIAAAAAAAIABQAAgAIAAAAAAAJABQAAgAIAAAAAAAKABQAAgAIAAAAAAAKABMAAgAIAAAAAAAKABIAAgAIAAAAAAAKABEAAgAIAAAAAAAKABAAAgAIAAAAAAAKAA8AAgAIAAAAAAAKAA4AAgAIAAAAAAAKAA0AAgAIAAAAAAAKAAwAAgAIAAAAAAAKAAsAAgAIAAAAAAAKAAoAAgAIAAAAAAAKAAkAAgAIAAAAAAAKAAgAAgAIAAAAAAAKAAcAAgAIAAAAAAAKAAYAAgAIAAAAAAAKAAUAAgAIAAAAAAAKAAQAAgAIAAAAAAAKAAMAAgAIAAAAAAAKAAIAAgAIAAAAAAAKAAEAAgAIAAAAAAAKAAAAAgAIAAAAAAAKAP//AgAIAAAAAAAJAP//AgAIAAAAAAAIAP//AgAIAAAAAAAHAP//AgAIAAAAAAAGAP//AgAIAAAAAAAFAP//AgAIAAAAAAAEAP//AgAIAAAAAAADAP//AgAIAAAAAAACAP//AgAIAAAAAAABAP//AgAIAAAAAAAAAP//AgAIAAAAAAA=")
tile_set = ExtResource("3_c4wfy")

[node name="PieceLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("3_c4wfy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 640)
zoom = Vector2(0.46, 0.46)

[node name="SFX_Settle" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_1ikwo")

[node name="SFX_NextLevel" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_tfuta")

[node name="SFX_Clear" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_lxhe6")

[node name="BGM" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_kc7xo")

[node name="BGMInteractive" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamInteractive_ii76b")
autoplay = true

[node name="ScoreContainer" type="VBoxContainer" parent="."]
offset_left = 832.0
offset_top = 1024.0
offset_right = 1152.0
offset_bottom = 1280.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreData" type="Label" parent="ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "000000"
horizontal_alignment = 1

[node name="UIOverlay" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_right = 640.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 0.490196)

[node name="UIGameOver" type="VBoxContainer" parent="UIOverlay"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EndGameOverLabel" type="Label" parent="UIOverlay/UIGameOver"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "GAME OVER"
horizontal_alignment = 1

[node name="Margin1" type="Control" parent="UIOverlay/UIGameOver"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="EndScoreLabel" type="Label" parent="UIOverlay/UIGameOver"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "FINAL SCORE"
horizontal_alignment = 1

[node name="EndScoreData" type="Label" parent="UIOverlay/UIGameOver"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "000000"
horizontal_alignment = 1

[node name="Margin2" type="Control" parent="UIOverlay/UIGameOver"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Margin3" type="Control" parent="UIOverlay/UIGameOver"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ButtonNewGame" type="Button" parent="UIOverlay/UIGameOver"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "New Game"

[node name="ButtonQuit" type="Button" parent="UIOverlay/UIGameOver"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Exit Game"

[node name="UIPause" type="VBoxContainer" parent="UIOverlay"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("8_16dyp")

[node name="EndGameOverLabel" type="Label" parent="UIOverlay/UIPause"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="Margin4" type="Control" parent="UIOverlay/UIPause"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Margin5" type="Control" parent="UIOverlay/UIPause"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ButtonUnpause" type="Button" parent="UIOverlay/UIPause"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Unpause"

[node name="ButtonNewGame2" type="Button" parent="UIOverlay/UIPause"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "New Game"

[node name="DropTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="UIOverlay/UIGameOver/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="UIOverlay/UIGameOver/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="UIOverlay/UIPause/ButtonUnpause" to="UIOverlay/UIPause" method="_on_button_unpause_pressed"]
[connection signal="pressed" from="UIOverlay/UIPause/ButtonNewGame2" to="." method="_on_button_new_game_pressed"]
[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
